suricata work in progress (arkime)

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -123,6 +123,7 @@ threat.tactic.name=db:threat.tactic.name;group:malcolm;kind:termfield;friendly:T
 threat.technique.id=db:threat.technique.id;group:malcolm;kind:termfield;friendly:Technique ID;help:Technique ID
 threat.technique.name=db:threat.technique.name;group:malcolm;kind:termfield;friendly:Technique;help:Technique
 rule.name=db:rule.name;group:malcolm;kind:termfield;friendly:Event Name;help:Event Name
+rule.id=db:rule.id;group:malcolm;kind:termfield;friendly:Rule ID;help:Rule ID
 rule.category=db:rule.category;group:malcolm;kind:termfield;friendly:Event Category;help:Event Category
 
 # file information
@@ -1363,20 +1364,20 @@ zeek.x509.san_uri=db:zeek.x509.san_uri;group:zeek_x509;kind:termfield;friendly:S
 
 # Suricata
 
-suricata.action=db:suricata.action;group:suricata;kind:termfield
-suricata.app_proto_expected=db:suricata.app_proto_expected;group:suricata;kind:termfield
-suricata.app_proto_orig=db:suricata.app_proto_orig;group:suricata;kind:termfield
-suricata.app_proto_tc=db:suricata.app_proto_tc;group:suricata;kind:termfield
-suricata.app_proto_ts=db:suricata.app_proto_ts;group:suricata;kind:termfield
-suricata.category=db:suricata.category;group:suricata;kind:termfield
-suricata.flow_id=db:suricata.flow_id;group:suricata;kind:termfield
-suricata.pcap_cnt=db:suricata.pcap_cnt;group:suricata;kind:integer
-suricata.pcap_filename=db:suricata.pcap_filename;group:suricata;kind:termfield
-suricata.severity=db:suricata.severity;group:suricata;kind:termfield
-suricata.signature=db:suricata.signature;group:suricata;kind:termfield
-suricata.stream=db:suricata.stream;group:suricata;kind:integer
-suricata.timestamp=db:suricata.timestamp;group:suricata;kind:termfield
-suricata.tx_id=db:suricata.tx_id;group:suricata;kind:termfield
+suricata.action=db:suricata.action;group:suricata_common;kind:termfield
+suricata.app_proto_expected=db:suricata.app_proto_expected;group:suricata_common;kind:termfield
+suricata.app_proto_orig=db:suricata.app_proto_orig;group:suricata_common;kind:termfield
+suricata.app_proto_tc=db:suricata.app_proto_tc;group:suricata_common;kind:termfield
+suricata.app_proto_ts=db:suricata.app_proto_ts;group:suricata_common;kind:termfield
+suricata.category=db:suricata.category;group:suricata_common;kind:termfield
+suricata.flow_id=db:suricata.flow_id;group:suricata_common;kind:termfield
+suricata.pcap_cnt=db:suricata.pcap_cnt;group:suricata_common;kind:integer
+suricata.pcap_filename=db:suricata.pcap_filename;group:suricata_common;kind:termfield
+suricata.severity=db:suricata.severity;group:suricata_common;kind:termfield
+suricata.signature=db:suricata.signature;group:suricata_common;kind:termfield
+suricata.stream=db:suricata.stream;group:suricata_common;kind:integer
+suricata.timestamp=db:suricata.timestamp;group:suricata_common;kind:termfield
+suricata.tx_id=db:suricata.tx_id;group:suricata_common;kind:termfield
 
 suricata.alert.action=db:suricata.alert.action;group:suricata_alert;kind:termfield
 suricata.alert.metadata.created_at=db:suricata.alert.metadata.created_at;group:suricata_alert;kind:termfield
@@ -1849,7 +1850,7 @@ zeek_tunnel=require:zeek.tunnel;title:Zeek tunnel.log;fields:zeek.tunnel.tunnel_
 zeek_weird=require:zeek.weird;title:Zeek weird.log;fields:zeek.weird.name,zeek.weird.addl,zeek.weird.notice,zeek.weird.peer
 zeek_wireguard=require:zeek.wireguard;title:Zeek wireguard.log;fields:zeek.wireguard.established,zeek.wireguard.initiations,zeek.wireguard.responses
 zeek_x509=require:zeek.x509;title:Zeek x509.log;fields:zeek.x509.certificate_version,zeek.x509.certificate_serial,zeek.x509.certificate_subject.CN,zeek.x509.certificate_subject.C,zeek.x509.certificate_subject.O,zeek.x509.certificate_subject.OU,zeek.x509.certificate_subject.ST,zeek.x509.certificate_subject.SN,zeek.x509.certificate_subject.L,zeek.x509.certificate_subject.DC,zeek.x509.certificate_subject.GN,zeek.x509.certificate_subject.pseudonym,zeek.x509.certificate_subject.serialNumber,zeek.x509.certificate_subject.title,zeek.x509.certificate_subject.initials,zeek.x509.certificate_subject.emailAddress,zeek.x509.certificate_subject.description,zeek.x509.certificate_subject.postalCode,zeek.x509.certificate_subject.street,zeek.x509.certificate_issuer.CN,zeek.x509.certificate_issuer.DC,zeek.x509.certificate_issuer.C,zeek.x509.certificate_issuer.O,zeek.x509.certificate_issuer.OU,zeek.x509.certificate_issuer.ST,zeek.x509.certificate_issuer.SN,zeek.x509.certificate_issuer.L,zeek.x509.certificate_issuer.GN,zeek.x509.certificate_issuer.pseudonym,zeek.x509.certificate_issuer.serialNumber,zeek.x509.certificate_issuer.title,zeek.x509.certificate_issuer.initials,zeek.x509.certificate_issuer.emailAddress,zeek.x509.certificate_not_valid_before,zeek.x509.certificate_not_valid_after,zeek.x509.certificate_key_alg,zeek.x509.certificate_sig_alg,zeek.x509.certificate_key_type,zeek.x509.certificate_key_length,zeek.x509.certificate_exponent,zeek.x509.certificate_curve,zeek.x509.client_cert,zeek.x509.fingerprint,zeek.x509.host_cert,zeek.x509.san_dns,zeek.x509.san_uri,zeek.x509.san_email,zeek.x509.san_ip,zeek.x509.basic_constraints_ca,zeek.x509.basic_constraints_path_len
-suricata=require:suricata.timestamp;title:Suricata;fields:suricata.action,suricata.app_proto_expected,suricata.app_proto_orig,suricata.app_proto_tc,suricata.app_proto_ts,suricata.category,suricata.flow_id,suricata.pcap_cnt,suricata.pcap_filename,suricata.severity,suricata.signature,suricata.stream,suricata.timestamp,suricata.tx_id
+suricata=require:suricata.timestamp;title:Suricata Common Fields;fields:suricata.action,suricata.app_proto_expected,suricata.app_proto_orig,suricata.app_proto_tc,suricata.app_proto_ts,suricata.category,suricata.flow_id,suricata.pcap_cnt,suricata.pcap_filename,suricata.severity,suricata.signature,suricata.stream,suricata.timestamp,suricata.tx_id
 suricata_alert=require:suricata.alert;title:Suricata Alert;fields:suricata.alert.action,suricata.alert.metadata.created_at,suricata.alert.metadata.malware_family,suricata.alert.metadata.performance_impact,suricata.alert.metadata.signature_severity,suricata.alert.metadata.updated_at,suricata.alert.rev,suricata.alert.severity
 suricata_anomaly=require:suricata.anomaly;title:Suricata Anomaly;fields:suricata.anomaly.app_proto,suricata.anomaly.code,suricata.anomaly.event,suricata.anomaly.event_no,suricata.anomaly.layer,suricata.anomaly.type
 suricata_dhcp=require:suricata.dhcp;title:Suricata DHCP;fields:suricata.dhcp.assigned_ip,suricata.dhcp.client_id,suricata.dhcp.client_ip,suricata.dhcp.client_mac,suricata.dhcp.dhcp_type,suricata.dhcp.dns_servers,suricata.dhcp.hostname,suricata.dhcp.id,suricata.dhcp.lease_time,suricata.dhcp.next_server_ip,suricata.dhcp.params,suricata.dhcp.rebinding_time,suricata.dhcp.relay_ip,suricata.dhcp.renewal_time,suricata.dhcp.requested_ip,suricata.dhcp.routers,suricata.dhcp.subnet_mask,suricata.dhcp.type
