--- a/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
+++ b/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
@@ -163,4 +163,8 @@ filter {
   if (![event][provider]) { mutate { id => "mutate_add_field_event_provider_enrichment"
                                      add_field => { "[event][provider]" => "malcolm" } } }
 
+  # arkime doesn't like / in the record ID
+  mutate { id => "mutate_gsub_event_hash_noslash"
+           gsub => [ "[event][hash]", "/", "" ] }
+
 }
