remove slashes from document IDs

--- a/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
+++ b/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
@@ -164,7 +164,9 @@ filter {
                                      add_field => { "[event][provider]" => "malcolm" } } }
 
   # arkime doesn't like / in the record ID
-  mutate { id => "mutate_gsub_event_hash_noslash"
-           gsub => [ "[event][hash]", "/", "" ] }
+  mutate { id => "mutate_gsub_event_hash_urlsafe"
+           gsub => [ "[event][hash]", "/", "_",
+                     "[event][hash]", "\+", "-",
+                     "[event][hash]", "=+", "" ] }
 
 }
