add GENISYS protocol parser

--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -259,6 +259,11 @@ filter {
   if ([zeek][ftp][command])                      { mutate { id => "mutate_merge_normalize_zeek_ftp_command"
                                                            merge => { "[event][action]" => "[zeek][ftp][command]" } } }
 
+  if ([zeek][genisys][direction] == "request") and ([zeek][genisys][header]) {
+    mutate { id => "mutate_merge_zeek_genisys_request_header_action"
+             merge => { "[event][action]" => "[zeek][genisys][header]" } }
+  }
+
   if ([zeek][http]) {
     if ([zeek][http][method])  {
       mutate { id => "mutate_merge_normalize_zeek_http_method"
@@ -631,6 +636,11 @@ filter {
       mutate { id => "mutate_merge_zeek_ftp_reply_code_result"
                merge => { "[event][result]" => "[zeek][ftp][reply_code]" } }
     }
+  }
+
+  if ([zeek][genisys][direction] == "response") and ([zeek][genisys][header]) {
+    mutate { id => "mutate_merge_zeek_genisys_response_header_result"
+             merge => { "[event][result]" => "[zeek][genisys][header]" } }
   }
 
   if ([zeek][http][status_code]) {
