minor tweaks for suricata for arkime, and an improvement to the security overview

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -4890,7 +4890,8 @@ filter {
       if ([zeek][notice][category] =~ /^CVE/) {
         mutate { id => "mutate_add_field_ecs_zeek_vulnerability_enumeration_cve"
                  add_field => { "[vulnerability][enumeration]" => "CVE" } }
-        # TODO: map vulnerability.id from plugin CVE name?
+        mutate { id => "mutate_add_field_ecs_zeek_vulnerability_id_cve"
+                 add_field => { "[vulnerability][id]" => "%{[zeek][notice][category]}" } }
       }
     }
 
