save log file information for lookup

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -457,6 +457,7 @@ filter {
       ("ecat" in [network][protocol]) or
       ("enip" in [network][protocol]) or
       ("ethercat" in [network][protocol]) or
+      ("genisys" in [network][protocol]) or
       ("iso_cotp" in [network][protocol]) or
       ("opcua-binary" in [network][protocol]) or
       ("modbus" in [network][protocol]) or
@@ -479,6 +480,10 @@ filter {
              add_field => { "[node]" => "malcolm" } }
   }
 
+  # trim path portion of originating log file
+  if ([log][file][path]) { mutate { id => "mutate_gsub_log_file_path_directory"
+                                    gsub => [ "[log][file][path]", "^.*/", "" ] } }
+
   # remove some fields we don't need (or don't need anymore)
   mutate {
     id => "mutate_remove_field_beats_useless"
@@ -488,9 +493,8 @@ filter {
       "[agent][id]",
       "[agent][type]",
       "[agent][version]",
-      "[log][offset]",
-      "[log][file][path]",
       "[input][type]",
+      "[log][offset]",
       "[prospector]",
       "[message]"
     ]
