--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -59,6 +59,7 @@ export ZEEK_DISABLE_SPICY_TFTP=
 export ZEEK_DISABLE_SPICY_WIREGUARD=
 
 # Suricata
+export SURICATA_RUNMODE=workers
 export SURICATA_AF_PACKET_BLOCK_SIZE=32768
 export SURICATA_AF_PACKET_BLOCK_TIMEOUT=10
 export SURICATA_AF_PACKET_BUFFER_SIZE=32768
