--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -89,6 +89,9 @@ x-zeek-variables: &zeek-variables
 x-suricata-variables: &suricata-variables
   SURICATA_AUTO_ANALYZE_PCAP_FILES: 'true'
   SURICATA_AUTO_ANALYZE_PCAP_THREADS: 1
+  SURICATA_UPDATE_RULES: 'false'
+  SURICATA_UPDATE_DEBUG: 'false'
+  SURICATA_UPDATE_ETOPEN: 'true'
   SURICATA_CUSTOM_RULES_ONLY: 'false'
   # suricata_config_populate.py can use MANY more environment variables to tweak
   # suricata.yaml (see https://github.com/OISF/suricata/blob/master/suricata.yaml.in and
