work in progress for opensearch v2

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -61,10 +61,10 @@ filter {
 
         #############################################################################################################################
         # take care of log timestamps in the formats all the different tools want them (phew!)
-        # @timestamp - date type
         # suricata.timestamp - ISO8601-formatted string
         # suricata.flow.start - ISO8601-formatted string
         # suricata.flow.end - ISO8601-formatted string
+        # @timestamp - epoch millseconds
         # timestamp - epoch millseconds
         # firstPacket - epoch millseconds
         # lastPacket - epoch millseconds
@@ -93,6 +93,7 @@ filter {
             endTimeMs = endTimeStr.nil? ? timeStampMs : (1000*DateTime.parse(endTimeStr).to_time.to_f).round(0)
             durationMs = (ageMs > 0) ? ageMs : ((endTimeMs > startTimeMs) ? endTimeMs-startTimeMs : 0)
             event.set('[timestamp]', timeStampMs)
+            event.set('[@timestamp]', timeStampMs)
             event.set('[firstPacket]', startTimeMs)
             event.set('[lastPacket]', endTimeMs)
             event.set('[length]', durationMs)
