--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3768,20 +3768,14 @@ filter {
                add_tag => [ "_missing_timestamp" ] }
     }
 
-    # convert @timestamp to UNIX to use native dashboards features
-    date {
-      id => "date_zeek_ts"
-      match => [ "[zeek][ts]", "UNIX" ]
-      target => "[@timestamp]"
-    }
-
     # set firstPacket to timestamp, lastPacket to timestamp + duration
-    # @timestamp is date type,
-    # timestamp, firstPacket, lastPacket are UNIX epoch milliseconds
+    # @timestamp, timestamp, firstPacket, lastPacket are UNIX epoch milliseconds
     ruby {
       id => "ruby_zeek_timestamp_calc"
-      code => "event.set('[timestamp]', (1000*event.get('[zeek][ts]').to_f).round(0))
-               event.set('[firstPacket]', event.get('[timestamp]'))"
+      code => "msTime = (1000*event.get('[zeek][ts]').to_f).round(0)
+               event.set('[timestamp]', msTime)
+               event.set('[@timestamp]', msTime)
+               event.set('[firstPacket]', msTime)"
     }
 
     if ([zeek][conn]) and ([zeek][conn][duration]) {
