work in progress for opensearch v2

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -64,7 +64,6 @@ filter {
         # suricata.timestamp - ISO8601-formatted string
         # suricata.flow.start - ISO8601-formatted string
         # suricata.flow.end - ISO8601-formatted string
-        # @timestamp - epoch millseconds
         # timestamp - epoch millseconds
         # firstPacket - epoch millseconds
         # lastPacket - epoch millseconds
@@ -85,15 +84,16 @@ filter {
           id => "ruby_suricata_timestamp_calc"
           init => "require 'time'; require 'date';"
           code => "
-            timeStampMs = (1000*DateTime.parse(event.get('[suricata][timestamp]')).to_time.to_f).round(0)
+            timpStamp = DateTime.parse(event.get('[suricata][timestamp]')).to_time
+            timeStampMs = (1000*timpStamp.to_f).round(0)
             startTimeStr = event.get('[suricata][flow][start]')
             endTimeStr = event.get('[suricata][flow][end]')
             ageMs = 1000*event.get('[suricata][flow][age]').to_i
             startTimeMs = startTimeStr.nil? ? timeStampMs : (1000*DateTime.parse(startTimeStr).to_time.to_f).round(0)
             endTimeMs = endTimeStr.nil? ? timeStampMs : (1000*DateTime.parse(endTimeStr).to_time.to_f).round(0)
             durationMs = (ageMs > 0) ? ageMs : ((endTimeMs > startTimeMs) ? endTimeMs-startTimeMs : 0)
+            event.set('[@timestamp]', LogStash::Timestamp.at(timpStamp))
             event.set('[timestamp]', timeStampMs)
-            event.set('[@timestamp]', timeStampMs)
             event.set('[firstPacket]', startTimeMs)
             event.set('[lastPacket]', endTimeMs)
             event.set('[length]', durationMs)
