--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3769,12 +3769,13 @@ filter {
     }
 
     # set firstPacket to timestamp, lastPacket to timestamp + duration
-    # @timestamp, timestamp, firstPacket, lastPacket are UNIX epoch milliseconds
+    # timestamp, firstPacket, lastPacket are UNIX epoch milliseconds
     ruby {
       id => "ruby_zeek_timestamp_calc"
+      init => "require 'time'"
       code => "msTime = (1000*event.get('[zeek][ts]').to_f).round(0)
                event.set('[timestamp]', msTime)
-               event.set('[@timestamp]', msTime)
+               event.set('[@timestamp]', LogStash::Timestamp.at(Time.strptime(msTime.to_s, '%Q')))
                event.set('[firstPacket]', msTime)"
     }
 
