work in progress on opensearch v2

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -5669,6 +5669,15 @@ filter {
     if ([zeek][ssl][subject_full]) {         mutate { id => "mutate_add_field_ecs_zeek_tls_subject_full"
                                                      add_field => { "[tls][server][subject]" => "%{[zeek][ssl][subject_full]}" } } }
 
+  } else if ([log_source] == "stun") {
+    #############################################################################################################################
+    # stun.log specific logic
+
+    if ([zeek][stun][attr_type]) {
+      mutate { id => "mutate_split_field_zeek_stun_attr_type"
+               split => { "[zeek][stun][attr_type]" => "," } }
+    }
+
   } else if ([log_source] == "stun_nat") {
     #############################################################################################################################
     # stun_nat.log specific logic
