--- a/logstash/pipelines/enrichment/97_arkimize.conf
+++ b/logstash/pipelines/enrichment/97_arkimize.conf
@@ -39,4 +39,16 @@ filter {
       # note that if so, the arkime "user" field may conflict with ECS here
     }
 
+    # this identifies which node the log came from
+    if ([beat][name]) {
+      mutate { id => "mutate_add_field_beat_name_node"
+               add_field => { "[node]" => "%{[beat][name]}" } }
+    } else if ([host][name]) {
+      mutate { id => "mutate_add_field_host_name_node"
+               add_field => { "[node]" => "%{[host][name]}" } }
+    } else {
+      mutate { id => "mutate_add_field_logstash_node"
+               add_field => { "[node]" => "malcolm" } }
+    }
+
 }
