--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -298,6 +298,7 @@ services:
     volumes:
       - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.orig.yml:ro
       - ./logstash/pipelines:/usr/share/logstash/malcolm-pipelines.available:ro
+      - ./logstash/patterns:/usr/share/logstash/malcolm-patterns:ro
       - ./logstash/ruby:/usr/share/logstash/malcolm-ruby:ro
       - ./logstash/maps/malcolm_severity.yaml:/etc/malcolm_severity.yaml:ro
       - ./logstash/certs/logstash.keystore:/usr/share/logstash/config/logstash.keystore:rw
