--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -1,12 +1,25 @@
 filter {
 
-  if ([event][module] == "nginx") and ([event][dataset] == "nginx.access") {
-    grok {
-      id => "grok_beat_nginx_access"
-      patterns_dir => "/usr/share/logstash/malcolm-patterns"
-      match => { "message" => "%{NGINX_ACCESS}" }
-      # remove_tag => ["_grokparsefailure"]
+  if ([event][module] == "nginx") {
+
+    if ([event][dataset] == "nginx.access") {
+      grok {
+        id => "grok_beat_nginx_access"
+        patterns_dir => "/usr/share/logstash/malcolm-patterns"
+        match => { "message" => "%{NGINX_ACCESS}" }
+        # remove_tag => ["_grokparsefailure"]
+      }
     }
-  }
+
+    if ([timestamp]) {
+      date {
+        id => "date_beats_nginx_timestamp"
+        match => [ "[timestamp]", "dd/MMM/yyyy:HH:mm:ss Z" ]
+        target => "[@timestamp]"
+        remove_field => [ "[timestamp]" ]
+      }
+    }
+
+  } # nginx
 
 }
