nginx parsing error

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -10,11 +10,19 @@ filter {
         # remove_tag => ["_grokparsefailure"]
       }
     }
+    if ([event][dataset] == "nginx.error") {
+      grok {
+        id => "grok_beat_nginx_error"
+        patterns_dir => "/usr/share/logstash/malcolm-patterns"
+        match => { "message" => "%{NGINX_ERROR}" }
+        # remove_tag => ["_grokparsefailure"]
+      }
+    }
 
     if ([timestamp]) {
       date {
         id => "date_beats_nginx_timestamp"
-        match => [ "[timestamp]", "dd/MMM/yyyy:HH:mm:ss Z" ]
+        match => [ "[timestamp]", "dd/MMM/yyyy:HH:mm:ss Z", "yyyy/MM/dd HH:mm:ss" ]
         target => "[@timestamp]"
         remove_field => [ "[timestamp]" ]
       }
