polish up the nginx access bits

--- a/logstash/pipelines/beats/98_finalize.conf
+++ b/logstash/pipelines/beats/98_finalize.conf
@@ -54,6 +54,17 @@ filter {
       ]
     }
 
+    # remove tags we'd rather not see
+    mutate { id => "mutate_beats_tags_remove"
+             remove_tag => [ "beats_input_codec_plain_applied",
+                             "_dateparsefailure",
+                             "_grokparsefailure",
+                             "_jsonparsefailure",
+                             "_dissectfailure",
+                             "_ouilookupfailure",
+                             "_geoip_lookup_failure" ] }
+
+
     # event.provider
     if (![event][provider]) { mutate { id => "mutate_add_field_event_provider_beats"
                                        add_field => { "[event][provider]" => "malcolm" } } }
