--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -428,6 +428,14 @@ filter {
 
   ################################################################################################
 
+  if ([user_agent][original]) {
+    useragent {
+      id => "user_agent_original_parse"
+      source => "[user_agent][original]"
+      ecs_compatibility => "v1"
+    }
+  }
+
   # ja3/ja3s are arrays at this point, as Arkime expects them to be
   if ([tls][ja3]) and ([tls][ja3][0]) {
     translate {
