--- a/logstash/pipelines/beats/01_input_beats.conf
+++ b/logstash/pipelines/beats/01_input_beats.conf
@@ -8,7 +8,7 @@ filter {
   # this pipeline only needs to see logs from other misc. beats used by Malcolm
   if ("_malcolm_beats" in [tags]) {
     mutate { id => "mutate_filebeat_malcolm_beats_forward_tag_remove"
-             remove_tag => [ "_malcolm_beats", "beats_input_codec_plain_applied" ] }
+             remove_tag => [ "_malcolm_beats" ] }
   } else {
     drop { id => "drop_not_malcolm_beats" }
   }
