Work in progress, going to dynamically load the ECS rather than copying it myself

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3726,7 +3726,7 @@ filter {
                 "[log][offset]" ]
     concatenate_sources => true
     # uses event.hash
-    ecs_compatibility => "v1"
+    ecs_compatibility => "v8"
     method => "MURMUR3_128"
     base64encode => true
   }
@@ -4436,7 +4436,7 @@ filter {
           event.set('[url][path]', uri) unless uri.nil?
           event.set('[url][port]', port) unless port.nil?
           event.set('[url][query]', query) unless query.nil? || query.empty?
-          event.set('[url][user]', Array(user).first) unless user.nil?
+          event.set('[url][username]', Array(user).first) unless user.nil?
         "
         # TODO: ECS url domain stuff (url.registered_domain, url.top_level_domain)
         # perhaps use something like https://github.com/plutonbacon/logstash-filter-publicsuffix
