continued work on progress for updates for opensearch v2.0 with hedgehog

--- a/logstash/pipelines/beats/01_input_beats.conf
+++ b/logstash/pipelines/beats/01_input_beats.conf
@@ -12,4 +12,8 @@ filter {
   } else {
     drop { id => "drop_not_malcolm_beats" }
   }
+
+  # rename message to event.original
+  mutate { id => "mutate_rename_beats_message"
+           rename => { "[message]" => "[event][original]" } }
 }
