--- a/logstash/pipelines/beats/98_finalize.conf
+++ b/logstash/pipelines/beats/98_finalize.conf
@@ -1,21 +1,44 @@
 filter {
 
-    # store message as event.original
-    mutate { id => "mutate_rename_beats_message"
-             rename => { "[message]" => "[event][original]" } }
-
     if (![event][hash]) {
+
       # create a repeatable fingerprint for document ID into event.hash
-      fingerprint {
-        id => "fingerprint_malcolm_beats_message"
-        source => [ "[event][original]" ]
-        concatenate_sources => true
-        # uses event.hash
-        ecs_compatibility => "v8"
-        method => "MURMUR3_128"
-        base64encode => true
-      }
-    }
+
+      if ([event][original]) {
+        fingerprint {
+          id => "fingerprint_malcolm_beats_event_original"
+          source => [ "[host][name]",
+                      "[event][original]",
+                      "[@timestamp]" ]
+          concatenate_sources => true
+          # uses event.hash
+          ecs_compatibility => "v8"
+          method => "MURMUR3_128"
+          base64encode => true
+        }
+
+      } else {
+        # at this point we should have already assigned a hash (or had event.original
+        # to hash). This generally should not happen so if it is reexamine where we're not
+        # doing the work we should be.
+        fingerprint {
+          id => "fingerprint_malcolm_beats_unknown"
+          source => [ "[host][name]",
+                      "[event][module]",
+                      "[event][dataset]",
+                      "[agent][type]",
+                      "[input][type]",
+                      "[@timestamp]" ]
+          concatenate_sources => true
+          # uses event.hash
+          ecs_compatibility => "v8"
+          method => "MURMUR3_128"
+          base64encode => true
+          add_tag => [ "_beats_unknown_fingerprint" ]
+        }
+
+      } #if [event][original] /else
+    } # ![event][hash]
 
     # arkime doesn't like / in the record ID
     mutate { id => "mutate_beats_gsub_event_hash_urlsafe"
@@ -24,10 +47,7 @@ filter {
                        "[event][hash]", "=+", "" ] }
 
     # this identifies which node the log came from
-    if ([beat][name]) {
-      mutate { id => "mutate_beats_add_field_beat_name_node"
-               add_field => { "[node]" => "%{[beat][name]}" } }
-    } else if ([host][name]) {
+    if ([host][name]) {
       mutate { id => "mutate_beats_add_field_host_name_node"
                add_field => { "[node]" => "%{[host][name]}" } }
     } else {
@@ -46,9 +66,7 @@ filter {
         "[beat]",
         "[agent][ephemeral_id]",
         "[agent][id]",
-        "[agent][type]",
         "[agent][version]",
-        "[input][type]",
         "[log][offset]",
         "[prospector]"
       ]
@@ -57,6 +75,12 @@ filter {
     # remove tags we'd rather not see
     mutate { id => "mutate_beats_tags_remove"
              remove_tag => [ "beats_input_codec_plain_applied",
+                             "beats_input_raw_event",
+                             "_malcolm_auditbeat",
+                             "_malcolm_filebeat_syslog",
+                             "_malcolm_heatbeat",
+                             "_malcolm_metricbeat",
+                             "_malcolm_protologbeat",
                              "_dateparsefailure",
                              "_grokparsefailure",
                              "_jsonparsefailure",
@@ -88,7 +112,19 @@ filter {
     }
 
     # this field is used to determine opensearch index prefix
-    mutate { id => "mutate_add_malcolm_beats_index_prefix"
-             add_field => { "[@metadata][malcolm_opensearch_index_prefix]" => "malcolm_beats_%{[event][module]}" } }
+    if ([agent][type]) {
+      mutate { id => "mutate_add_malcolm_beats_index_prefix_agent_type"
+               add_field => { "[@metadata][malcolm_opensearch_index_prefix]" => "malcolm_beats_%{[agent][type]}" } }
+    } else if ([event][module]) {
+      mutate { id => "mutate_add_malcolm_beats_index_prefix_event_module"
+               add_field => { "[@metadata][malcolm_opensearch_index_prefix]" => "malcolm_beats_%{[event][module]}" } }
+    } else if ([input][type]) {
+      mutate { id => "mutate_add_malcolm_beats_index_prefix_input_type"
+               add_field => { "[@metadata][malcolm_opensearch_index_prefix]" => "malcolm_beats_%{[input][type]}" } }
+    } else {
+      mutate { id => "mutate_add_malcolm_beats_index_prefix_beats"
+               add_field => { "[@metadata][malcolm_opensearch_index_prefix]" => "malcolm_beats_" } }
+    }
+
 
 }
