--- a/sensor-iso/interface/sensor_ctl/filebeat-syslog/filebeat-syslog.yml
+++ b/sensor-iso/interface/sensor_ctl/filebeat-syslog/filebeat-syslog.yml
@@ -8,7 +8,7 @@ fields_under_root: true
 
 processors:
   - add_tags:
-      tags: [_malcolm_beats]
+      tags: [_malcolm_beats, _malcolm_filebeat_syslog]
 
 #================================ Outputs ======================================
 
