--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -64,6 +64,7 @@ filter {
                     "[event][module]",
                     "[syslog][facility]",
                     "[syslog][priority]",
+                    "[process][program]",
                     "[event][original]",
                     "[process][pid]",
                     "[@timestamp]" ]
