--- a/logstash/pipelines/beats/98_finalize.conf
+++ b/logstash/pipelines/beats/98_finalize.conf
@@ -68,6 +68,7 @@ filter {
         "[agent][id]",
         "[agent][version]",
         "[log][offset]",
+        "[log][source]",
         "[prospector]"
       ]
     }
