--- a/sensor-iso/interface/sensor_ctl/heatbeat/protologbeat.yml
+++ b/sensor-iso/interface/sensor_ctl/heatbeat/protologbeat.yml
@@ -12,7 +12,7 @@ fields_under_root: true
 
 processors:
   - add_tags:
-      tags: [_malcolm_beats, _malcolm_protologbeat]
+      tags: [_malcolm_beats, _malcolm_heatbeat]
 
 #================================ Outputs ======================================
 
