set up misc. protologbeat listener

--- a/logstash/pipelines/beats/98_finalize.conf
+++ b/logstash/pipelines/beats/98_finalize.conf
@@ -81,6 +81,7 @@ filter {
                              "_malcolm_filebeat_syslog",
                              "_malcolm_heatbeat",
                              "_malcolm_metricbeat",
+                             "_malcolm_miscbeat",
                              "_malcolm_protologbeat",
                              "_dateparsefailure",
                              "_grokparsefailure",
