--- a/sensor-iso/interface/sensor_ctl/supervisor.d/beats.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/beats.conf
@@ -38,6 +38,15 @@ killasgroup=true
 autostart=%(ENV_AUTOSTART_AUDITBEAT)s
 directory=%(ENV_SUPERVISOR_PATH)s/auditbeat
 
+[program:miscbeat]
+command=bash -l %(ENV_SUPERVISOR_PATH)s/miscbeat/sensor_miscbeat_local.sh
+startsecs=5
+startretries=3
+stopasgroup=true
+killasgroup=true
+autostart=%(ENV_AUTOSTART_MISCBEAT)s
+directory=%(ENV_SUPERVISOR_PATH)s/miscbeat
+
 [program:heatbeat]
 command=bash -l %(ENV_SUPERVISOR_PATH)s/heatbeat/sensor_heatbeat_local.sh
 startsecs=5
@@ -48,7 +57,7 @@ autostart=%(ENV_AUTOSTART_HEATBEAT)s
 directory=%(ENV_SUPERVISOR_PATH)s/heatbeat
 
 [program:sensors]
-command=/usr/bin/python3 /usr/local/bin/beat-log-temperature.py -p %(ENV_PROTOLOGBEAT_PORT)s -c 0 -s %(ENV_PROTOLOGBEAT_INTERVAL)s
+command=/usr/bin/python3 /usr/local/bin/beat-log-temperature.py -p %(ENV_HEATBEAT_PORT)s -c 0 -s %(ENV_HEATBEAT_INTERVAL)s
 startsecs=5
 startretries=3
 stopasgroup=true
