--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -16,8 +16,9 @@ export ARKIME_PACKET_ACL=
 export ARKIME_ECS_PROVIDER=arkime
 export ARKIME_ECS_DATASET=session
 
-export PROTOLOGBEAT_PORT=9515
-export PROTOLOGBEAT_INTERVAL=10
+export HEATBEAT_PORT=9515
+export HEATBEAT_INTERVAL=10
+export MISCBEAT_PORT=9516
 
 export ZEEK_LOG_PATH=/home/sensor/bro_logs
 export ZEEK_MAX_DISK_FILL=90
@@ -109,6 +110,7 @@ export AUTOSTART_CLAMAV_UPDATES=false
 export AUTOSTART_FILEBEAT=false
 export AUTOSTART_HEATBEAT=false
 export AUTOSTART_HEATBEAT_SENSORS=false
+export AUTOSTART_MISCBEAT=false
 export AUTOSTART_METRICBEAT=false
 export AUTOSTART_NETSNIFF=false
 export AUTOSTART_PRUNE_PCAP=false
